[ master ] - emacs, fixed modeline color.

--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -4003,6 +4003,10 @@ Read the comment carefully to understand how it works:
   (defface my-modeline-light-red-font '((t :foreground "#f44747")) "Modeline light-red font")
   (defface my-modeline-light-green-font '((t :foreground "#BBF0EF")) "Modeline light-green font")
   (defface my-modeline-dark-green-font '((t :foreground "#5A7387")) "Modeline dark-green font")
+  (defface my-modeline-purple-font '((t :foreground "systemPurpleColor")) "Modeline purple font")
+  (defface my-modeline-indigo-font '((t :foreground "systemIndigoColor")) "Modeline indigo font")
+  (defface my-modeline-black-font '((t :foreground "gridColor")) "Modeline black font")
+
 
 
   ;; -------------------------------------------------------------------------------
@@ -4029,7 +4033,7 @@ Read the comment carefully to understand how it works:
 
   (defvar-local my-modeline-major-mode
     '(:eval
-        (propertize (my-get-major-mode) 'face 'my-modeline-orange-font))
+        (propertize (my-get-major-mode) 'face 'my-modeline-indigo-font))
     "Mode line constructor to display major mode"
   )
 
@@ -4045,7 +4049,7 @@ Read the comment carefully to understand how it works:
 
   (defvar-local my-modeline-buffer-name
     '(:eval
-        (propertize (my-get-current-name) 'face 'my-modeline-blue-green-font))
+        (propertize (my-get-current-name) 'face 'my-modeline-black-font))
     "Mode line constructor to display buffer name"
   )
 
@@ -4277,6 +4281,7 @@ Take the =org-level-1= as an example:
 *** Fion colors
 
 #+BEGIN_SRC emacs-lisp
+
   (set-face-attribute 'mode-line-active nil :background "systemGreenColor")
   ;; Function name
   (set-face-attribute 'font-lock-function-name-face nil :foreground "#2AA198" :weight 'bold)
