[ master ] - emacs, fixed visual mode colemak and org-roam keybindings and modeline colors.

--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -4167,7 +4167,7 @@ Read the comment carefully to understand how it works:
   ;; Override the default face for change mode line backgroundW
   ;; -------------------------------------------------------------------------------
   (set-face-attribute 'mode-line-active nil :background "#2F2F2F")
-  (set-face-attribute 'mode-line-inactive nil :background nil)
+  (set-face-attribute 'mode-line-inactive nil :background "#e4e5e4")
 
 
   ;; -------------------------------------------------------------------------------
@@ -4455,6 +4455,7 @@ Take the =org-level-1= as an example:
   (dolist (map (list
                 evil-motion-state-map
                 evil-normal-state-map
+                evil-visual-state-map
                 ))
       (define-key map (kbd "n") 'nil)
       (define-key map (kbd "e") 'nil)
@@ -4466,6 +4467,7 @@ Take the =org-level-1= as an example:
 
   (dolist (map (list
                 evil-motion-state-map
+                evil-visual-state-map
                 ))
       (define-key map (kbd "n") 'evil-next-line)
       (define-key map (kbd "e") 'evil-previous-line)
@@ -4735,20 +4737,20 @@ Take the =org-level-1= as an example:
 ** =org-roam=
 
 #+BEGIN_SRC emacs-lisp
-  (use-package org-roam
-  :custom
-  (org-roam-directory (file-truename "~/sbzi/personal/org-roam"))
-  :bind (("C-c n l" . org-roam-buffer-toggle)
-         ("C-c n f" . org-roam-node-find)
-         ("C-c n g" . org-roam-graph)
-         ("C-c n i" . org-roam-node-insert)
-         ("C-c n c" . org-roam-capture)
-         ;; Dailies
-         ("C-c n j" . org-roam-dailies-capture-today))
-  :config
-  ;; If you're using a vertical completion framework, you might want a more informative completion interface
-  (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
-  (org-roam-db-autosync-mode)
-  ;; If using org-roam-protocol
-  (require 'org-roam-protocol))
+ (use-package org-roam
+   :custom
+   (org-roam-directory (file-truename "~/sbzi/personal/org-roam"))
+   :bind (("<leader> n l" . org-roam-buffer-toggle)
+          ("<leader> n f" . org-roam-node-find)
+          ("<leader> n g" . org-roam-graph)
+          ("<leader> n i" . org-roam-node-insert)
+          ("<leader> n c" . org-roam-capture)
+          ;; Dailies
+          ("<leader> n j" . org-roam-dailies-capture-today))
+   :config
+   ;; If you're using a vertical completion framework, you might want a more informative completion interface
+   (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
+   (org-roam-db-autosync-mode)
+   ;; If using org-roam-protocol
+   (require 'org-roam-protocol))
 #+END_SRC
